# ELektron2

./: .gitignore  HOTAISLE_FRESH_INSTALL.md  LAB-NOTES.md
LAB NOTES/: 2026-03-05_ELektron_WSL2_CAPD_JNI_Lab_Notes.md  2026-03-05_ELektron_WSL2_CAPD_JNI_Lab_Notes.txt  2026-03-07_ELektron2_DormandPrince_Rewrite_Lab_Notes.md
cpp/: CMakeLists.txt
cpp/scripts/: energy_scan.sh  energy_scan_4gpu.sh  energy_scan_fine.sh  run_spin_minus_y_4gpu.sh  run_tworows_spin_plus_y_4gpu.sh  scan_tworows_spiny_and_nozitter_4gpu.sh  spin_energy_scan_4gpu.sh
cpp/src/: PlotDots.h  capd_logger_stub.cpp  dp853_integrator.h  electron.h  main.cpp  physical_data.h  rivas_equations.h
cpp/src/cuda/: elektron_cuda.cu
cpp/src/rocm/: elektron_rocm.cpp
results/: aggregate_rocm.py  aggregate_rocm.sh  energy_scan_20260312_002809.csv  energy_scan_20260312_192853.csv  energy_scan_20260312_193251.csv  energy_scan_20260312_203722.csv  plot_angle_histogram.py  rocm_summary.csv  summarize.sh  summary.csv
scripts/: plot_exit_angle_comparison.py  plot_spin_angle_density.py
src/: Electron.java  Main.java  PhysicalData.java  PlotDots.java  RivasEquations.java
